--- a/simloidTCP.cbp
+++ b/simloidTCP.cbp
@@ -13,6 +13,9 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="-Wextra" />
+					<Add option="-Wall" />
+					<Add option="-std=c++11" />
 					<Add directory="src" />
 				</Compiler>
 				<Linker>
