--- a/simloidTCP.cbp
+++ b/simloidTCP.cbp
@@ -84,6 +84,7 @@
 		<Unit filename="src/robots/crawler.h" />
 		<Unit filename="src/robots/fourlegged.h" />
 		<Unit filename="src/robots/hannah.h" />
+		<Unit filename="src/robots/hannah_random.h" />
 		<Unit filename="src/robots/karl_sims.h" />
 		<Unit filename="src/robots/nolegs.h" />
 		<Unit filename="src/robots/standard.h" />
